--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/react-router-dom": "^5.1.8",
     "@types/redux-actions": "^2.6.2",
-    "antd": "^4.16.11",
+    "antd": "^3.23.5",
     "axios": "^0.21.1",
-    "echarts": "^5.1.2",
+    "echarts": "^4.4.0",
     "loadash": "^1.0.0",
+    "node-sass": "^4.12.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
@@ -21,6 +22,7 @@
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
     "redux-actions": "^2.6.5",
+    "screenfull": "^5.1.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
