--- a/package.json
+++ b/package.json
@@ -1,41 +1,38 @@
 {
-  "name": "antd-demo",
+  "name": "react-admin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@loadable/component": "^5.15.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/react-router-dom": "^5.1.8",
-    "@types/redux-actions": "^2.6.2",
+    "animate.css": "^3.7.2",
     "antd": "^3.23.5",
-    "axios": "^0.21.1",
+    "axios": "^0.19.0",
+    "babel-plugin-import": "^1.12.2",
+    "braft-editor": "^2.3.8",
+    "customize-cra": "^0.8.0",
     "echarts": "^4.4.0",
-    "loadash": "^1.0.0",
+    "husky": "^3.0.9",
+    "lint-staged": "^9.4.2",
     "node-sass": "^4.12.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.4",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "redux": "^4.1.1",
-    "redux-actions": "^2.6.5",
-    "screenfull": "^5.1.0",
-    "web-vitals": "^1.0.1"
+    "nprogress": "^0.2.0",
+    "prettier": "^1.18.2",
+    "react": "^16.10.1",
+    "react-app-rewired": "^2.1.3",
+    "react-dom": "^16.10.1",
+    "react-loadable": "^5.5.0",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.1",
+    "react-scripts": "3.1.2",
+    "redux": "^4.0.4",
+    "screenfull": "^5.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -47,6 +44,21 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "node_modules/.bin/prettier --write",
+      "git add"
+    ],
+    "src/**/*.{css,scss,less,json,html,md,markdown}": [
+      "node_modules/.bin/prettier --write",
+      "git add"
     ]
   }
 }
