--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.0.0",
     "animate.css": "^3.7.2",
     "antd": "^3.23.5",
     "axios": "^0.19.0",
@@ -11,6 +12,8 @@
     "customize-cra": "^0.8.0",
     "echarts": "^4.4.0",
     "husky": "^3.0.9",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "lint-staged": "^9.4.2",
     "node-sass": "^4.12.0",
     "nprogress": "^0.2.0",
